--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -37,7 +37,7 @@ stages:
 
     - script: |
         npm install
-      displayName: 'npm install and run'
+      displayName: 'npm install'
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
