--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -31,7 +31,8 @@ stages:
 
     - script: |
         npm install
-      displayName: 'npm install'
+        npm test
+      displayName: 'npm install and test'
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
