--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha --timeout 1000 --exit"
+    "test": "mocha test --reporter mocha-junit-reporter --timeout 1000 --exit"
   },
   "author": "Istvan Galfi",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
-    "mocha": "^9.1.3"
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2"
   }
 }
