--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,12 @@ stages:
         npm install
         npm test
       displayName: 'npm install and test'
+      
+    - task: PublishTestResults@2
+      condition: succeeded()
+      inputs:
+        testRunner: JUnit
+        testResultsFiles: '**/test-results.xml'
 
     - task: ArchiveFiles@2
       displayName: 'Archive files'
